--- a/assets/jsons/translations/it.json
+++ b/assets/jsons/translations/it.json
@@ -209,7 +209,6 @@
                     "en-US": "English, US",
                     "fr-FR": "Français",
                     "es-ES": "Español",
-                    "it-IT": "Italiano",
                     "de-DE": "Deutsch",
                     "ru-RU": "Русский",
                     "zh-CN": "简体中文",
@@ -221,7 +220,6 @@
                         "en-US": "English, Stati Uniti d'America",
                         "fr-FR": "Francese",
                         "es-ES": "Spagnolo",
-                        "it-IT": "Italiano",
                         "de-DE": "Tedesco",
                         "ru-RU": "Russo",
                         "zh-CN": "Cinese (Semplificato)",
@@ -851,13 +849,12 @@
         "stay": "Ricordami",
         "connect-to-meta": "Connettiti a Meta"
     },
-    "original-version-backup-oculus": {
-        "title": "Attenzione",
-        "body": {
-            "must-be-installed-once": "Devi avere Beat Saber installato dallo Store Oculus su questo dispositivo, altrimenti Beat Saber potrebbe chiudersi automaticamente dopo l'avvio.",
-            "will-backup": "Per avviare questa versione, la cartella di installazione originale di Beat Saber situata nella tua libreria Oculus verrà rinominata e verrà automaticamente ripristinata quando Beat Saber verrà chiuso."
-        },
-        "not-remind-me": "Non ricordarmelo",
+        "enable-oculus-sideloaded-apps": {
+        "title": "Abilita Sideloading",
+        "info-1": "Per avviare Beat Saber, è necessario abilitare la possibilità di eseguire app sideloaded. BSManager richiederà i diritti di amministratore per abilitare automaticamente questa funzione.",
+        "info-2": "La funzione di sideloading consente di avviare giochi situati al di fuori della cartella della libreria Oculus.",
+        "info-3": "Dopo che il sideloading è stato attivato, la funzione rimarrà attiva e non ti verrà più chiesto di abilitarla.",
+        "i-want-to-do-it-myself": "Voglio farlo da solo",
         "understood": "Ho capito"
     },
     "enter-meta-token": {
