--- a/assets/jsons/translations/it.json
+++ b/assets/jsons/translations/it.json
@@ -218,7 +218,7 @@
                     "ko-KR": "한국어",
                     "translated": {
                         "en-EN": "Inglese, Regno Unito",
-                        "en-US": "English, Stati Uniti d'America",
+                        "en-US": "Inglese, Stati Uniti d'America",
                         "fr-FR": "Francese",
                         "es-ES": "Spagnolo",
                         "it-IT": "Italiano",
