--- a/assets/jsons/translations/it.json
+++ b/assets/jsons/translations/it.json
@@ -911,7 +911,7 @@
             "tags": "tag",
             "specificities": "generale",
             "requirements": "requisiti",
-            "exclude": "escludi"
+            "exclude": "escludi",
             "leaderboard": "classifica"
         },
         "map-types": {
